# snowcli-tools

./: .flake8  .gitignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_REVIEW_MCP_MIGRATION.md  BREAKING_CHANGES_V2.0.md  CHANGELOG.md  CLI_REMOVAL_PLAN.md  CONTRIBUTING.md  DOCUMENTATION_AUDIT_COMPLETE.md  DOCUMENTATION_REVIEW_V2.md  MCP_FIRST_MIGRATION_PLAN.md  MCP_SETUP_COMPLETE.md  MCP_TEST_RESULTS.md  MIGRATION_QUICK_REFERENCE.md  PHASE2.3_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_PROGRESS.md  PHASE4_COMPLETE.md  PROFILE_VALIDATION_SUMMARY.md  PR_DESCRIPTION.md  README.md  REBRAND_COMPLETE.md  REFACTORING_SUMMARY.md  RELEASE_NOTES.md  SQL_VALIDATION_FIX_SUMMARY.md  V1.10.0_IMPLEMENTATION_SPEC.md  V1.8.0_FINAL_SUMMARY.md  V2.0_AGGRESSIVE_MCP_ONLY_PLAN.md  V2.0_EXECUTIVE_SUMMARY.md  V2.0_IMPLEMENTATION_CHECKLIST.md  V2.0_MIGRATION_SUMMARY.md  anthropic_ai_engineer.md  extract_dependencies.py  mcp_config.json  mcp_service_config.json  parallel_query.py  pyproject.toml  (+8 more)
docs/: 5-minute-quickstart.md  INDEX.md  advanced_lineage_features.md  api-reference.md  architecture.md  cli-to-mcp-migration.md  configuration.md  features_overview.md  getting-started-legacy-cli.md  getting-started.md  getting_started.md  incremental_catalog_guide.md  mcp-integration.md  mcp_diagnostic_tools.md  mcp_server_technical_guide.md  mcp_server_user_guide.md  migration-guide.md  profile_troubleshooting_guide.md  profile_validation_quickstart.md  security.md  testing_coverage_report.md  troubleshooting.md  v1.9.0_migration.md  workflows.md
tests/: __init__.py  (+16 more)
(+166 files in other folders)
